2da. parte del proyecto Patitas (update 1.3)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,14 @@
     <string name="valchkguardardatos">Recordar</string>
     <string name="msguspassword">Ingrese usuario y password</string>
     <string name="action_cerrar">Cerrar sesión</string>
+    <string name="tvtituloregistro">REGISTRARME</string>
+    <string name="valetnomusuario">Ingrese su nombre</string>
+    <string name="valetapeusuario">Ingrese su apellido</string>
+    <string name="valetemailusuario">Ingrese su email</string>
+    <string name="valetcelusuario">Ingrese su celular</string>
+    <string name="valetusureg">Ingrese su usuario</string>
+    <string name="valetpassreg" >Ingrese su password</string>
+    <string name="valetrepassreg">Vuelva a ingresar su password</string>
+    <string name="valbtnregistrarme">REGISTRAR</string>
+    <string name="valbtnirlogin">VOLVER A LOGIN</string>
 </resources>
