--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,9 @@
     <string name="valetrepassreg">Vuelva a ingresar su password</string>
     <string name="valbtnregistrarme">REGISTRAR</string>
     <string name="valbtnirlogin">VOLVER A LOGIN</string>
+    <string name="valtvtextovoluntario">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
+    <string name="valchkaceptocondiciones">ACEPTO LAS CONDICIONES DE SER VOLUNTARIO</string>
+    <string name="valbtnregvoluntario">REGISTRAR</string>
+    <string name="valtvtituvoluntario">¿Quieres ser voluntario?</string>
+    <string name="valtvesuvoluntario">"GRACIAS YA ERES PARTE DE NUESTRA RED DE VOLUNTARIOS "</string>
 </resources>
